# scigantic-headers

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/scigantic_headers/: __init__.py  bed.py  benchmark.py  cli.py  cryosparc.py  decoders.py  dicom.py  fastq.py  fcs.py  genbank.py  gff.py  illumina.py  mmcif.py  mzml.py  optics.py  parquet.py  pdb.py  sam.py  sources.py  star.py  vcf.py
tests/: conftest.py  test_bed.py  test_cryosparc.py  test_decoders.py  test_dicom.py  test_fastq.py  test_fcs.py  test_fixtures.py  test_formats.py  test_fuzz.py  test_genbank.py  test_gff.py  test_illumina.py  test_mmcif.py  test_mzml.py  test_optics.py  test_parquet.py  test_pdb.py  test_sam.py  test_sources.py  test_star.py  test_vcf.py
tests/fixtures/: mrc-cases.json  sample.parquet
