[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scigantic-headers"
version = "0.1.0"
description = "Decode scientific file headers (MRC cryo-EM, extensible) into typed context for agents — pure, zero-dependency, with bounded parallel readers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary — Evaluation Use Only. See LICENSE." }
authors = [{ name = "Scigantic" }]
keywords = ["cryo-em", "mrc", "header", "schema-card", "instrument", "context", "edge"]
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
]
# Zero runtime dependencies is a feature: installs and runs on an air-gapped box.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
scigantic-headers = "scigantic_headers.cli:main"
scigantic-headers-bench = "scigantic_headers.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
